# clobber

./: .gitignore  Cargo.toml  LICENSE.md  README.md  clobber.toml.sample  planning.md
.github/: conduit.toml
.github/workflows/: ci.yaml
src/: bot.rs  command.rs  config.rs  lib.rs  main.rs  matrix.rs
tests/: bot.rs
tests/common/: mod.rs
