[package]
name = "clobber"
version = "0.1.0"
authors = ["Emelie <em@nao.sh>"]
edition = "2018"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["macros", "sync", "rt-multi-thread", "time"] }
#futures = "0.3"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["parking_lot"] }
rpassword = "5.0"
rand = "0.7"
clap = "2.33"
async-trait = "0.1"
# matrix-sdk-common-macros = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "d9e5a17" }

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "1fd1570"
default_features = false
features = ["encryption", "sled_cryptostore", "sled_state_store", "rustls-tls"]
