[package]
name = "clobber"
version = "0.1.0"
authors = ["Emelie Graven <em@nao.sh>"]
edition = "2018"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.11", features = ["macros", "sync", "rt-multi-thread", "time", "parking_lot"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["parking_lot"] }
rpassword = "5.0"
rand = "0.8"
clap = "2.33"
async-trait = "0.1"
tracing-attributes = "0.1.15"
serde_with = "1.9.4"
globset = "0.4.8"


[dependencies.matrix-sdk]
version = "0.4"
default_features = false
features = ["encryption", "sled_cryptostore", "sled_state_store", "rustls-tls"]

[dependencies.matrix-sdk-test]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "4d57681"
